src/components/NavBar/NavBar.css
.nav-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.nav-link {
  border-radius: 3px;
  color: white;
  margin: 5px;
  padding: 1.3rem;
  text-decoration: none;
  font-size: larger;
  overflow-x: crop;
  white-space: nowrap;

  transition: 
    color var(--transition-duration),
    background-color var(--transition-duration);
  transition-timing-function: var(--wiggle);
  text-align: center;

  position: relative;
}

.nav-link:hover, .nav-link:active {
  color: var(--lota-green);
  background-color: var(--lota-tan);
}

.nav-sub-links {
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 3.7rem;
  left: 1px;
  z-index: 5;
}

.nav-sub-links * {
  outline: 1px solid var(--lota-tan);
  border-radius: 3px;
  padding: 1rem;
  width: 150%;
  font-size: large;
  text-align: left;

  color: white;
  background-color: var(--lota-lime);
  text-decoration: none;
  transition: 
    color var(--transition-duration),
    background-color var(--transition-duration);
  transition-timing-function: var(--wiggle);
}

.nav-sub-links *:hover, .nav-sub-links *:active {
  color: var(--lota-lime);
  background-color: var(--lota-tan);
}

@media (min-width: 1551px) {
  .nav-link {
    margin-left: 1.5rem;
  }
}


@media (max-width: 1650px) {
  .nav-link {
    padding: 0.1rem 0.25rem;
    margin: 0;
  }

  .nav-sub-links {
    top: 1.6rem;
  }

  .nav-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
    overflow-x: visible;
    overflow-y: visible;
    max-width: 100dvw;
  }
}

